source/parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> body
Rule 1     body -> statement
Rule 2     statement -> expression
Rule 3     statement -> statement CR expression
Rule 4     expression -> H1 factor
Rule 5     expression -> H2 factor
Rule 6     expression -> H3 factor
Rule 7     expression -> H4 factor
Rule 8     expression -> H5 factor
Rule 9     expression -> H6 factor
Rule 10    factor -> TEXT

Terminals, with rules where they appear

CR                   : 3
H1                   : 4
H2                   : 5
H3                   : 6
H4                   : 7
H5                   : 8
H6                   : 9
TEXT                 : 10
error                : 

Nonterminals, with rules where they appear

body                 : 0
expression           : 2 3
factor               : 4 5 6 7 8 9
statement            : 1 3

Parsing method: LALR

state 0

    (0) S' -> . body
    (1) body -> . statement
    (2) statement -> . expression
    (3) statement -> . statement CR expression
    (4) expression -> . H1 factor
    (5) expression -> . H2 factor
    (6) expression -> . H3 factor
    (7) expression -> . H4 factor
    (8) expression -> . H5 factor
    (9) expression -> . H6 factor

    H1              shift and go to state 4
    H2              shift and go to state 2
    H3              shift and go to state 3
    H4              shift and go to state 6
    H5              shift and go to state 7
    H6              shift and go to state 5

    body                           shift and go to state 1
    expression                     shift and go to state 9
    statement                      shift and go to state 8

state 1

    (0) S' -> body .



state 2

    (5) expression -> H2 . factor
    (10) factor -> . TEXT

    TEXT            shift and go to state 10

    factor                         shift and go to state 11

state 3

    (6) expression -> H3 . factor
    (10) factor -> . TEXT

    TEXT            shift and go to state 10

    factor                         shift and go to state 12

state 4

    (4) expression -> H1 . factor
    (10) factor -> . TEXT

    TEXT            shift and go to state 10

    factor                         shift and go to state 13

state 5

    (9) expression -> H6 . factor
    (10) factor -> . TEXT

    TEXT            shift and go to state 10

    factor                         shift and go to state 14

state 6

    (7) expression -> H4 . factor
    (10) factor -> . TEXT

    TEXT            shift and go to state 10

    factor                         shift and go to state 15

state 7

    (8) expression -> H5 . factor
    (10) factor -> . TEXT

    TEXT            shift and go to state 10

    factor                         shift and go to state 16

state 8

    (1) body -> statement .
    (3) statement -> statement . CR expression

    $end            reduce using rule 1 (body -> statement .)
    CR              shift and go to state 17


state 9

    (2) statement -> expression .

    CR              reduce using rule 2 (statement -> expression .)
    $end            reduce using rule 2 (statement -> expression .)


state 10

    (10) factor -> TEXT .

    CR              reduce using rule 10 (factor -> TEXT .)
    $end            reduce using rule 10 (factor -> TEXT .)


state 11

    (5) expression -> H2 factor .

    CR              reduce using rule 5 (expression -> H2 factor .)
    $end            reduce using rule 5 (expression -> H2 factor .)


state 12

    (6) expression -> H3 factor .

    CR              reduce using rule 6 (expression -> H3 factor .)
    $end            reduce using rule 6 (expression -> H3 factor .)


state 13

    (4) expression -> H1 factor .

    CR              reduce using rule 4 (expression -> H1 factor .)
    $end            reduce using rule 4 (expression -> H1 factor .)


state 14

    (9) expression -> H6 factor .

    CR              reduce using rule 9 (expression -> H6 factor .)
    $end            reduce using rule 9 (expression -> H6 factor .)


state 15

    (7) expression -> H4 factor .

    CR              reduce using rule 7 (expression -> H4 factor .)
    $end            reduce using rule 7 (expression -> H4 factor .)


state 16

    (8) expression -> H5 factor .

    CR              reduce using rule 8 (expression -> H5 factor .)
    $end            reduce using rule 8 (expression -> H5 factor .)


state 17

    (3) statement -> statement CR . expression
    (4) expression -> . H1 factor
    (5) expression -> . H2 factor
    (6) expression -> . H3 factor
    (7) expression -> . H4 factor
    (8) expression -> . H5 factor
    (9) expression -> . H6 factor

    H1              shift and go to state 4
    H2              shift and go to state 2
    H3              shift and go to state 3
    H4              shift and go to state 6
    H5              shift and go to state 7
    H6              shift and go to state 5

    expression                     shift and go to state 18

state 18

    (3) statement -> statement CR expression .

    CR              reduce using rule 3 (statement -> statement CR expression .)
    $end            reduce using rule 3 (statement -> statement CR expression .)

